--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "stream-chat": "^8.12.1",
+    "stream-chat-react": "^10.11.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
