--- a/server/package.json
+++ b/server/package.json
@@ -2,5 +2,21 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "type": "module",
+  "scripts": {
+    "start": "nodemon src/index.js"
+  },
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^7.5.3",
+    "nodemon": "^3.0.1",
+    "stream-chat": "^8.12.1",
+    "stream-chat-react": "^10.11.0",
+    "uuid": "^9.0.1"
+  }
 }
