--- a/client/package.json
+++ b/client/package.json
@@ -6,11 +6,13 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "stream-chat": "^8.12.1",
     "stream-chat-react": "^10.11.0",
+    "universal-cookie": "^6.1.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
